--- a/addons/commands_export_plugin/plugin.cfg
+++ b/addons/commands_export_plugin/plugin.cfg
@@ -1,8 +1,8 @@
 [plugin]
 
-name="ProjectExportCommands"
+name="CommandsExportPlugin"
 description="A plugin using EditorExportCommand to provide the ability for CLI commands set in the
-ProjectSettings to run during export."
+ProjectSettings to run during export. Requires the NovaTools plugin as a dependency."
 author="NovaDC"
-version="1.0.0.1"
+version="v2.0.0.0"
 script="plugin.gd"
